SERVER-61485 Wrong SBE plan reported by explain() for rejected plans